[gd_scene format=3 uid="uid://mainuiscene"]

[ext_resource type="Script" uid="uid://cy1xdb2y681n2" path="res://ui/main_ui.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://bc2b508jstjar" path="res://ui/hud/hud_ui.tscn" id="2_hud"]
[ext_resource type="PackedScene" uid="uid://bx6tqcwt8wrfi" path="res://ui/sequence/sequence_ui.tscn" id="3_sequence"]
[ext_resource type="PackedScene" uid="uid://dwa2mjjjlk4pm" path="res://ui/sequence/library_panel/library_panel.tscn" id="4_library"]
[ext_resource type="PackedScene" uid="uid://bkug7wowkh7rj" path="res://ui/settings/settings_ui.tscn" id="5_settings"]
[ext_resource type="PackedScene" uid="uid://fqst8yiycbne" path="res://ui/quiz/EarTrainerUI.tscn" id="6_eartrainer"]

[node name="MainUI" type="CanvasLayer" unique_id=2119689971]
script = ExtResource("1_script")

[node name="SafeArea" type="MarginContainer" parent="." unique_id=1613987853]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="GameUIContainer" type="Control" parent="SafeArea" unique_id=1726922704]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="HUD" parent="SafeArea/GameUIContainer" unique_id=1606711129 instance=ExtResource("2_hud")]
layout_mode = 1

[node name="SequenceUI" parent="SafeArea/GameUIContainer" unique_id=265938061 instance=ExtResource("3_sequence")]
layout_mode = 1

[node name="LibraryPanelUI" parent="." unique_id=2032711389 instance=ExtResource("4_library")]
visible = false

[node name="SettingsUI" parent="." unique_id=1799239641 instance=ExtResource("5_settings")]
visible = false

[node name="EarTrainerUI" parent="." unique_id=1245617658 instance=ExtResource("6_eartrainer")]
visible = false
